<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- AUTH ACTIVITY -->
    <string name="auth_activity_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="auth_activity_button_facebook">Sign in with Facebook</string>
    <string name="auth_activity_button_google">Sign in with Google</string>
    <string name="auth_activity_connection_refused">Connection refused</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_activity_no_choose_restaurant">You have not selected a restaurant</string>
    <string name="main_activity_success_log_out">Log out with success</string>
    <string name="main_activity_pop_up_log_out_title">LOG OUT</string>
    <string name="main_activity_pop_up_log_out_message">Are you sure that you want to log out ?</string>
    <string name="main_activity_pop_up_yes">YES</string>
    <string name="main_activity_pop_up_no">NO</string>
    <string name="main_activity_pop_up_notifications_title">NOTIFICATIONS</string>
    <string name="main_activity_pop_up_notifications_message">Do you want to activate notifications ?</string>


    <!-- ITEM LIST RESTAURANTS -->
    <string name="item_list_restaurants_restaurant">Restaurant</string>
    <string name="item_list_restaurants_address">Address</string>
    <string name="item_list_restaurants_hours">Hours</string>
    <string name="item_list_restaurants_distance">Distance</string>
    <string name="item_list_restaurants_number_workmates">(1)</string>

    <!-- DETAILS FRAGMENT -->
    <string name="details_fragment_restaurant">Restaurant</string>
    <string name="details_fragment_address">Address</string>
    <string name="details_fragment_call">CALL</string>
    <string name="details_fragment_like">LIKE</string>
    <string name="details_fragment_website">WEBSITE</string>
    <string name="details_fragment_restaurant_added_favorites">Restaurant added to favorites</string>
    <string name="details_fragment_restaurant_removed_favorites">Restaurant removed from favorites</string>
    <string name="details_fragment_website_no_application_found">No corresponding application found</string>
    <string name="details_fragment_no_website">This restaurant does not have a website</string>
    <string name="details_fragment_no_phone">This restaurant does not have a phone number</string>
    <string name="details_fragment_no_restaurant">OOPS, IT SEEMS THIS IS NOT A RESTAURANT</string>

    <!-- MAP VIEW FRAGMENT -->
    <string name="map_view_fragment_my_position">My position</string>


    <!-- NAVIGATION HEADER -->
    <string name="navigation_header_name">Name</string>
    <string name="navigation_header_email">Email</string>


    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapview">Map View</string>
    <string name="bottom_navigation_menu_listview">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <!-- RESPONSE SIGN IN -->
    <string name="response_sign_in_success">Connection success</string>
    <string name="response_sign_in_error">Connection error</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">233929610966007</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb233929610966007</string>


    <!-- NAVIGATION DRAWER MENU -->
    <string name="navigation_drawer_your_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_settings">SETTINGS</string>
    <string name="navigation_drawer_logout">LOGOUT</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- LIST WORKMATES ADAPTER -->
    <string name="list_workmates_adapter_is_eating">is eating (</string>
    <string name="list_workmates_adapter_parenthesis">)</string>
    <string name="list_workmates_adapter_hasnt_decided_yed">hasn\'t decided yet</string>
    <string name="list_workmates_adapter_is_joining">is joining!</string>

    <!-- LIST RESTAURANTS ADAPTER -->
    <string name="list_restaurants_adapter_open_now">Open now</string>
    <string name="list_restaurants_adapter_close_now">Close now</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="sdk_8_notification_channel_id" translatable="false">fcm_sdk_8_channel</string>
    <string name="notification_title">"Lunchtime : "</string>
    <string name="notification_message">"You've a lunch scheduled"</string>
    <string name="notification_workmates_with">"With"</string>

    <!-- AUTOCOMPLETE -->
    <string name="autocomplete_toast">"No Restaurant Found"</string>
    <string name="autocomplete_hint">"Restaurant"</string>




</resources>
